--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
+spring.mvc.view.prefix: /
+spring.mvc.view.suffix: .jsp
+
 server.port=8080
 #taip reikia path apsirasyt
 spring.freemarker.template-loader-path:/
-spring.mvc.view.suffix:.ftl
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
