User Login and Register part (little left to finish)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,4 @@ spring.datasource.password=CodeAcademy333
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 #skirta sukurti lentele pagal anotacijas, bet pasikurus, reikia issitrint
-spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=create-drop
