--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,5 +10,9 @@ spring.datasource.username=postgres
 spring.datasource.password=CodeAcademy333
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+spring.jpa.properties.hibernate.type=trace
+#reikia del Validation errors, kad spring messages tokios turetu buti. Jei failas bus ne validation, tai nepersius(?)
+spring.messages.basename=validation
+
 #skirta sukurti lentele pagal anotacijas, bet pasikurus, reikia issitrint
 #spring.jpa.hibernate.ddl-auto=create-drop
