Teacher's page (Modal update window without id's - Teacher window works)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,4 @@ spring.messages.basename=validation
 
 #skirta sukurti lentele pagal anotacijas, bet pasikurus, reikia issitrint
 #spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=update
